[gd_scene load_steps=5 format=2]

[ext_resource path="res://project/objects/structures/ExplosiveBarrel.gd" type="Script" id=1]
[ext_resource path="res://project/objects/structures/StructureBase.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 5.5

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.966309, 0.712479, 0.135887, 1, 1, 0.410156, 0.410156, 1 )

[node name="ExplosiveBarrel" instance=ExtResource( 2 )]
script = ExtResource( 1 )
hp_max = 50
hp = 50
texture_variations = 1

[node name="Sprite" parent="." index="0"]
position = Vector2( -0.5, -3 )
region_rect = Rect2( 336, 16, 16, 16 )

[node name="CollisionShape2D" parent="." index="2"]
visible = false
position = Vector2( 0, 0 )

[node name="Hurtbox" parent="." index="3"]
visible = false
position = Vector2( 0, -2 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="CatchFireArea" parent="." index="5"]
visible = false
position = Vector2( 0, -3 )

[node name="CollisionShape2D" parent="CatchFireArea" index="0"]
position = Vector2( 0, 1 )

[node name="SparkParticles" type="CPUParticles2D" parent="." index="6"]
visible = false
position = Vector2( 0, -2 )
lifetime = 0.3
explosiveness = 0.14
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
direction = Vector2( 0, -1 )
spread = 129.68
gravity = Vector2( 0, 0 )
initial_velocity = 30.0
color_ramp = SubResource( 2 )

[node name="SparkAutoDamageTimer" type="Timer" parent="." index="7"]
wait_time = 0.1

[connection signal="destroyed" from="." to="." method="_on_ExplosionBarrel_destroyed"]
[connection signal="got_hit" from="." to="." method="_on_ExplosiveBarrel_got_hit"]
[connection signal="timeout" from="SparkAutoDamageTimer" to="." method="_on_SparkAutoDamageTimer_timeout"]

[editable path="Hurtbox"]
